# lore

./: Cargo.toml  LICENSE  README.md
docf-cli/: Cargo.toml
docf-cli/src/: main.rs
docf-core/: Cargo.toml
docf-core/src/: builder.rs  error.rs  extract.rs  lib.rs  match_.rs  match_set.rs  params.rs  pipeline.rs  search.rs
docf-core/tests/: integration.rs
lore-cli/: Cargo.toml
lore-cli/src/: lib.rs
lore-cli/src/cli/: lore.rs  mcp_lore.rs  project_lore.rs  system_lore.rs
lore-cli/src/core/: arguments.rs  defaults.rs  mod.rs  search.rs  update.rs
lore-cli/src/mcp/: devhelp2.rs  gir.rs  handler.rs  mod.rs  tools.rs
lore-cli/tests/: arguments_tests.rs
lore-core/: Cargo.toml
lore-core/src/: builder.rs  error.rs  extract.rs  lib.rs  search.rs
lore-core/tests/: integration.rs  pipeline_tests.rs
tests/: test_mcp_full.sh  test_pagination.sh
