[package]
name = "lore-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"

[dependencies]
walkdir = "2"
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
crossbeam-deque = "0.8"
aho-corasick = "1"
async-stream = "0.3"
futures-core = "0.3"
flate2 = "1.1"
xz2 = "0.1"
bzip2-rs = "0.1"
ruzstd = "0.8"
epub = "2.1"
lopdf = "0.42"
zip = "8.6.0"
quick-xml = "0.41"
infer = "0.19.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
tempfile = "3.10.1"
